@@ -21,7 +21,7 @@ FEATURES
 
 Features, specific to SNMPv3 model include:
 
-* USM authentication (MD5/SHA) and privacy (DES) protocols (RFC3414)
+* USM authentication (MD5/SHA) and privacy (DES/AES) protocols (RFC3414)
 * View-based access control to use with any SNMP model (RFC3415)
 * Built-in SNMP proxy PDU converter for building multi-lingual
   SNMP entities (RFC2576)
